# orddc2024

./: .gitignore  README.md  dataset_download.py  directory_structure.txt  inference_script_v2_Phase1.py  inference_script_v2_Phase2.py  model_ph1_sample.yaml  model_ph2_sample.yaml  pyproject.toml  requirements.txt  requirements_gpu.txt
orddc2024/predictors/: base_predictor.py  ultralytics_predictor.py  yolov5_predictor.py
orddc2024/predictors/yolov5/: global_train.yaml  global_train_dataset.yaml
orddc2024/predictors/yolov5/models/: common.py  yolov5lGlobalAB.yaml  yolov5mGlobalAB.yaml  yolov5n_GlobalAB.yaml  yolov5s_GlobalAB.yaml  yolov5x_ChinaAB.yaml  yolov5x_CzechAB.yaml  yolov5x_GlobalAB.yaml  yolov5x_IndiaAB.yaml  yolov5x_JapanAB.yaml  yolov5x_NRAB.yaml  yolov5x_NorwayAB.yaml  yolov5x_USAB.yaml
orddc2024/predictors/yolov5/scripts/: anchor.py  xml2yolo.py
orddc2024/predictors/yolov5/utils/: dataloaders.py  plots.py
train_scripts/: Phase1_script_detect_nano_32.py  global_train.yaml  yolo10_run_nano_32.py  yolo8_run_nano_32.py  yolov10_run_nano_32.py  yolov10_train.py  yolov8_run_nano_32.py  yolov8_train.py
train_scripts/runs/detect/global_WHOLE_SGD_32_lr_0.01_0.01_yolov8n_640/: args.yaml
